Signed-off-by: Dr. M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -588,6 +588,7 @@
                                     <p:menuitem ajax="false" action="/clinical/clinical_patient_for_receptionist" value="Patients"/>
                                     <p:menuitem ajax="false" action="/clinical/clinical_queue" value="Queue"/>
                                     <p:menuitem ajax="false" action="/clinical/clinical_reports_index" value="Reports"/>
+                                    <p:menuitem ajax="false" action="/clinical/favourite_index" value="Favourites"/>
                                     <p:menuitem ajax="false" action="/clinical/clinical_administration" value="Administration"/>
                                 </p:submenu>
 
