Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -809,7 +809,9 @@
 
 
             </h:panelGrid>
-
+            <div style="height: 40px;" class="nonPrintBlock" >
+            
+            </div>
             <div style="position: fixed; bottom: 10px; right: 10px; " class="nonPrintBlock" >
                 <p:clock pattern="hh:mm a - dd MMMM yyyy" mode="server"  />  
             </div>
