Collecting Center Reports Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -572,6 +572,8 @@
                                             <p:menuitem  ajax="false"  action="/lab/lab_agent_referece_book" value="Add Lab Book to Collecting Centre"  ></p:menuitem>
                                             <p:menuitem  ajax="false"  action="/lab/institutions_udate_credit_limit" value="Collecting Centre Credit Limit Update"  ></p:menuitem>
                                             <p:menuitem  ajax="false"  action="/reportLab/collecting_centre_report_agent_history" value="Collecting Centre History"  ></p:menuitem>
+                                            <p:menuitem  ajax="false"  action="/reportLab/report_collecting_center_payment_bill" value="Collecting Centre Diposits"  ></p:menuitem>
+                                            <p:menuitem  ajax="false"  action="/reportLab/report_collecting_center_balance" value="Collecting Center Current Balance"  ></p:menuitem>
                                         </p:submenu>
                                         
                                         <p:submenu label="Channell Agency Book Issuing">
