--- a/src/main/webapp/resources/css/pharmacypos.css
+++ b/src/main/webapp/resources/css/pharmacypos.css
@@ -13,7 +13,7 @@
 
 
     }
-    
+
     .fiveinchbill{
         position: relative!important;
         padding: 5px!important;
@@ -24,11 +24,11 @@
         font-size: 11px!important; 
         margin: auto!important; 
         background-size: 100% auto!important; 
-/*        border: 1px solid!important;*/
+        /*        border: 1px solid!important;*/
         font-size: 130%;
         text-transform: capitalize!important;
     }
-    
+
     .channelRecipt_24_2x9_3{
         position: relative!important;
         padding: 5px!important;
@@ -38,8 +38,18 @@
         font-family: sans-serif!important; 
         margin: auto!important; 
         background-size: 100% auto!important; 
-/*        border: 1px solid!important;*/
+        /*        border: 1px solid!important;*/
         text-transform: capitalize!important;
+    }
+    
+    .channelCoop{
+        overflow:hidden!important; 
+        border: 1px solid!important;
+        padding: 5px!important;
+        width: 12cm!important;
+        height: 9.5cm!important;
+        overflow:hidden!important; 
+        margin: auto!important; 
     }
 
     .posbillBreak{
@@ -136,7 +146,7 @@
         page-break-after:always!important;
 
     }
-    
+
     .channelRecipt_24_2x9_3{
         position: relative!important;
         padding: 5px!important;
@@ -148,6 +158,19 @@
         background-size: 100% auto!important; 
         border: 1px solid!important;
         text-transform: capitalize!important;
+    }
+
+    .channelCoop{
+        position: relative!important;
+        overflow:hidden!important; 
+        font-family: sans-serif!important; 
+        border: 1px solid!important;
+        padding: 5px!important;
+        width: 12cm!important;
+        height: 9.5cm!important;
+        overflow:hidden!important; 
+        margin: auto!important; 
+        background-size: 100% auto!important;
     }
 
     .posbillBreak{
