Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/css/printing.css
+++ b/src/main/webapp/resources/css/printing.css
@@ -493,6 +493,15 @@ root {
 
 }
 
+.itemsPrintingMid{
+
+    font-size: 11px;
+    position: absolute;
+    left: 35%;
+    top: 37%;
+
+}
+
 .itemsGSPrinting{
 
     font-size: 11px;
