--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -36,7 +36,7 @@
             <h:panelGroup >
                 <h:form>
                     <h:panelGroup >
-                        <p:ajaxStatus style="width:64px;height:64px;position:fixed;right:5px;top:5px">  
+                        <p:ajaxStatus style="width:64px;height:64px;position:fixed;right:5px;top:40px;">  
                             <f:facet name="start">  
                                 <p:graphicImage library="image" name="ajax-loader.gif" />  
                             </f:facet>  
